--- a/build.gradle
+++ b/build.gradle
@@ -24,4 +24,6 @@ dependencies {
     compile "org.springframework.security:spring-security-core:3.2.5.RELEASE"
     compile "org.springframework.security:spring-security-web:3.2.5.RELEASE"
     compile "org.springframework.security:spring-security-taglibs:3.2.5.RELEASE"
+    compile group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.2.4.Final'
+    compile group: 'postgresql', name: 'postgresql', version: '9.1-901-1.jdbc4'
 }
